[gd_scene load_steps=7 format=3 uid="uid://cts78m4a1wb25"]

[ext_resource type="Script" path="res://scripts/menu_screen.gd" id="1_mhhgl"]
[ext_resource type="Texture2D" uid="uid://delfw7augsost" path="res://assets/sprites/titlescreen.jpg" id="1_pakwm"]
[ext_resource type="Texture2D" uid="uid://d3plcejgltgr4" path="res://assets/sprites/accot_b.png" id="2_wd5hb"]
[ext_resource type="Theme" uid="uid://byrv18r6jjj5l" path="res://assets/resources/black_menu_theme.tres" id="3_k12dj"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="4_6wlvn"]
[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="5_rnn6k"]

[node name="menu_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mhhgl")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pakwm")
expand_mode = 1

[node name="logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -698.0
offset_top = 20.0
offset_right = 657.0
offset_bottom = 305.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wd5hb")
expand_mode = 1

[node name="main_menu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -441.0
offset_top = 200.0
offset_right = -278.0
offset_bottom = 450.0
grow_horizontal = 0
theme = ExtResource("3_k12dj")
theme_override_constants/separation = -5
script = ExtResource("4_6wlvn")
metadata/_edit_group_ = true

[node name="start_button" type="Button" parent="main_menu"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../settings_button")
focus_next = NodePath("../settings_button")
focus_previous = NodePath(".")
text = "Start"

[node name="settings_button" type="Button" parent="main_menu"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../start_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../audio_button")
focus_next = NodePath("../audio_button")
focus_previous = NodePath("../start_button")
text = "Settings"

[node name="audio_button" type="Button" parent="main_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../settings_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../credits_button")
focus_next = NodePath("../credits_button")
focus_previous = NodePath("../settings_button")
text = "Audio"

[node name="credits_button" type="Button" parent="main_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../audio_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../exit_button")
focus_next = NodePath("../exit_button")
focus_previous = NodePath("../audio_button")
text = "Credits"

[node name="exit_button" type="Button" parent="main_menu"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../credits_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../credits_button")
text = "Exit"

[node name="settings_menu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -529.0
offset_top = 200.0
offset_right = -189.0
offset_bottom = 560.0
grow_horizontal = 0
theme = ExtResource("3_k12dj")
theme_override_constants/separation = -5
script = ExtResource("5_rnn6k")
metadata/_edit_group_ = true

[node name="vsync_button" type="Button" parent="settings_menu"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../fullscreen_button")
focus_next = NodePath("../fullscreen_button")
focus_previous = NodePath(".")
text = "V-Sync: Off"

[node name="fullscreen_button" type="Button" parent="settings_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../vsync_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../resolution/resolutions")
focus_next = NodePath("../resolution/resolutions")
focus_previous = NodePath("../vsync_button")
text = "Fullscreen: Off"

[node name="resolution" type="VBoxContainer" parent="settings_menu"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="window" type="Label" parent="settings_menu/resolution"]
layout_mode = 2
text = "Window:"
horizontal_alignment = 1

[node name="resolutions" type="OptionButton" parent="settings_menu/resolution"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../fullscreen_button")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../debug_mode")
focus_next = NodePath("../../debug_mode")
focus_previous = NodePath("../../fullscreen_button")
alignment = 1
item_count = 3
selected = 2
popup/item_0/text = "1280x720"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2

[node name="debug_mode" type="Button" parent="settings_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../resolution/resolutions")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../view_controls")
focus_next = NodePath("../view_controls")
focus_previous = NodePath("../resolution/resolutions")
text = "Debug mode: Off"

[node name="view_controls" type="Button" parent="settings_menu"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../debug_mode")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../back_button")
focus_next = NodePath("../back_button")
focus_previous = NodePath("../debug_mode")
text = "View controls"

[node name="back_button" type="Button" parent="settings_menu"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../view_controls")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath("../view_controls")
text = "Back"

[node name="audio_menu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -510.0
offset_top = 200.0
offset_right = -210.0
offset_bottom = 599.0
grow_horizontal = 0
theme = ExtResource("3_k12dj")
theme_override_constants/separation = -5
metadata/_edit_group_ = true

[node name="bgm_slider" type="VBoxContainer" parent="audio_menu"]
layout_mode = 2

[node name="title" type="Label" parent="audio_menu/bgm_slider"]
layout_mode = 2
text = "Music volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="audio_menu/bgm_slider"]
layout_mode = 2

[node name="current_value" type="Label" parent="audio_menu/bgm_slider"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0 %"
horizontal_alignment = 1

[node name="bgs_slider" type="VBoxContainer" parent="audio_menu"]
layout_mode = 2

[node name="title" type="Label" parent="audio_menu/bgs_slider"]
layout_mode = 2
text = "Background vol"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="audio_menu/bgs_slider"]
layout_mode = 2

[node name="current_value" type="Label" parent="audio_menu/bgs_slider"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0 %"
horizontal_alignment = 1

[node name="sfx_slider" type="VBoxContainer" parent="audio_menu"]
layout_mode = 2

[node name="title" type="Label" parent="audio_menu/sfx_slider"]
layout_mode = 2
text = "SFX volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="audio_menu/sfx_slider"]
layout_mode = 2

[node name="current_value" type="Label" parent="audio_menu/sfx_slider"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0 %"
horizontal_alignment = 1

[node name="back_button" type="Button" parent="audio_menu"]
layout_mode = 2
text = "Back"

[node name="credits" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -462.5
offset_right = 462.5
offset_bottom = 4161.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_k12dj")
text = "CREDITS
Adan Chronicles
Crystal of Time

- - -

GAME DESIGN
Thomas M. Hesselink

PROGRAMMING
Thomas M. Hesselink

MUSIC SELECTION
Machteld Hesselink
Thomas M. Hesselink

TESTING
Martijn Hazendonk
Daniel Rosenkranz
Machteld Hesselink
Sieger Noppe
Nathan van der Stoep

- - -

Graphics Copyright Notice

\"On the verge\"
by Studio VDS


\"Titlelogo\"
by F. Stellingwerf


\"Painterly Spell Icons\"
by J.W. Bjerk (eleazzaar)
www.jwbjerk.com/art

- - -

Music Copyright Notice

\"Approach\"
\"Brave\"
\"Cave\"
\"Den\"
\"Find\"
\"Go out\"
\"Journey\"
\"Quiet town\"
\"Search\"
\"Seashore\"
\"Shadow\"
\"Spelunk\"
\"Store\"
\"Town\"
\"Volcano\"
\"Wake up\"
\"Wayfarer\"
\"Woods\"
by Yusaku Kishigami
www.presence-of-music.com


Some of the sounds in this project were created
by David McKee (ViRiX)
www.soundcloud.com/virix

- - -

COPYRIGHT
T64.nl
"
horizontal_alignment = 1
visible_characters_behavior = 1

[node name="Timer" type="Timer" parent="credits"]
wait_time = 0.01

[connection signal="pressed" from="main_menu/start_button" to="main_menu" method="_on_start_button_pressed"]
[connection signal="pressed" from="main_menu/settings_button" to="main_menu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="main_menu/audio_button" to="main_menu" method="_on_audio_button_pressed"]
[connection signal="pressed" from="main_menu/credits_button" to="main_menu" method="_on_credits_button_pressed"]
[connection signal="pressed" from="main_menu/exit_button" to="main_menu" method="_on_exit_button_pressed"]
[connection signal="pressed" from="settings_menu/vsync_button" to="settings_menu" method="_on_vsync_button_pressed"]
[connection signal="pressed" from="settings_menu/fullscreen_button" to="settings_menu" method="_on_fullscreen_button_pressed"]
[connection signal="item_focused" from="settings_menu/resolution/resolutions" to="settings_menu" method="_on_resolutions_item_focused"]
[connection signal="item_selected" from="settings_menu/resolution/resolutions" to="settings_menu" method="_on_resolutions_item_selected"]
[connection signal="pressed" from="settings_menu/debug_mode" to="settings_menu" method="_on_debug_mode_pressed"]
[connection signal="pressed" from="settings_menu/back_button" to="settings_menu" method="_on_back_button_pressed"]
[connection signal="timeout" from="credits/Timer" to="main_menu" method="_on_credits_scroll"]
